# adxl343_rs

./: Cargo.toml
src/: adxl343_interface.rs  lib.rs
src/registers/: accel_configs.rs  mod.rs
src/utils/: settings.rs
tests/: integration_tests.rs
tests/helper/: mod.rs
