[package]
name = "adxl343-i2c-generic"
version = "0.2.0"
edition = "2024"
description = "Interface to the adxl343 accelerometer using the embedded-hal i2c trait system"
license = "MIT"
repository = "https://github.com/eulersinstrument/adxl343-i2c-generic.git"

[lib]
doctest = false

[dependencies]
derive_setters = "0.1.9"
embedded-hal = "1.0.0"
embedded-hal-mock = "0.11.1"
lsm6ds3tr = "0.2.2"
modular-bitfield = "0.13.1"
simple-mermaid = "0.2.0"

#testing on the Rasberry Pi Model 4B running Raspian
[target.'cfg(linux)'.dependencies]
linux-embedded-hal = "0.4.1"


